--- a/app/src/main/res/layout/fragment_create_ride.xml
+++ b/app/src/main/res/layout/fragment_create_ride.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_rides"
+    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.it326.isucarpool.MainActivity"
@@ -13,38 +13,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        android:background="@color/common_google_signin_btn_text_dark_disabled">
+        android:layout_marginTop="60dp">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/offer_a_ride"
-            android:id="@+id/createridetitle"
-            android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
-            android:textSize="24sp"
-            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-            android:textStyle="normal|bold" />
-
-        <EditText
-            android:layout_width="match_parent"
+            android:id="@+id/start_loc"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
+        <TextView
             android:layout_height="wrap_content"
-            android:inputType="textPostalAddress"
-            android:ems="10"
-            android:id="@+id/startText"
-            android:layout_marginTop="20dp"
-            android:hint="@string/start_location"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
-            android:padding="6dp" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPostalAddress"
-            android:ems="10"
-            android:id="@+id/endText"
-            android:hint="@string/destination"
-            android:layout_marginTop="19dp"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
-            android:padding="6dp" />
+            android:layout_width="wrap_content"
+            android:id="@+id/end_loc"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
         android:paddingLeft="16dp"
