--- a/app/src/main/res/layout/adapter_rides_listitem.xml
+++ b/app/src/main/res/layout/adapter_rides_listitem.xml
@@ -3,15 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp"
+    android:paddingTop="5dp"
     android:orientation="horizontal">
-
+    <TextView
+        android:id="@+id/ride_id"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="0dp"
         android:paddingRight="10dp"
+        android:paddingBottom="1dp"
         android:src="@mipmap/ic_launcher" />
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,5 +38,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3dp" />
         </TableRow>
-        </TableLayout>
+        <TableRow>
+            <TextView
+                    android:id="@+id/ride_dest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="3dp" />
+        </TableRow>
+    </TableLayout>
 </LinearLayout>
