--- a/app/src/main/res/layout/adapter_rides_listitem.xml
+++ b/app/src/main/res/layout/adapter_rides_listitem.xml
@@ -10,6 +10,12 @@
         android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content" />
+    <TextView
+        android:id="@+id/driver_id"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
+
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
