--- a/app/src/main/res/layout/fragment_rides.xml
+++ b/app/src/main/res/layout/fragment_rides.xml
@@ -7,11 +7,12 @@
     tools:context="com.it326.isucarpool.RidesFragment"
     tools:showIn="@layout/activity_rides">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:orientation="horizontal">
         <EditText
             android:hint="Search Destinations"
