--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -1,6 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:id="@+id/chat" android:layout_height="match_parent">
+    android:id="@+id/chat" android:layout_height="match_parent"
+    android:paddingBottom="10dp"
+    android:paddingTop="5dp"
+    android:orientation="horizontal">
 
     <TextView
         android:layout_width="wrap_content"
@@ -8,4 +11,4 @@
         android:id="@+id/message_user"
         android:textStyle="normal|bold" />
 
-</RelativeLayout>
+</LinearLayout>
