--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,7 @@
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:paddingTop="16dp"
@@ -33,14 +33,15 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:text="Android Studio"
             android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/email"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:textSize="16sp"
+            android:layout_marginLeft="3dp"
             android:layout_height="wrap_content"
             android:text="android.studio@android.com"
             android:textColor="@android:color/white" />
