--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,8 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Notify new rides"
-            android:padding="16dp"
-            android:checked="true" />
+            android:padding="16dp" />
         <Switch
             android:id="@+id/notify_chat"
             android:layout_width="match_parent"
