--- a/app/src/main/res/drawable/rounded_message_r.xml
+++ b/app/src/main/res/drawable/rounded_message_r.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/authui_colorPrimary" />
+        android:color="#ce1126" />
 
-    <solid android:color="@color/authui_colorPrimary" />
+    <solid android:color="#fcefef" />
 
     <padding
         android:left="1dp"
