--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -30,7 +30,8 @@
         android:id="@+id/message_text_l"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
-
+        android:background="@drawable/rounded_message_l"
+        android:textColor="#fcefef"
         />
 
     <TextView
@@ -52,5 +53,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginLeft="75dp"
         android:layout_marginStart="75dp"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:background="@drawable/rounded_message_r"
+        android:textColor="#ce1126"/>
 </RelativeLayout>
