--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,7 +17,7 @@
             android:id="@+id/notify_chat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Notify new chat requests"
+            android:text="Notify new message"
             android:padding="16dp" />
         <Switch
             android:id="@+id/vibrate"
