--- a/app/src/main/res/layout/adapter_rides_listitem.xml
+++ b/app/src/main/res/layout/adapter_rides_listitem.xml
@@ -35,14 +35,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginRight="10dp"/>
         </TableRow>
         <TableRow>
             <TextView
                 android:id="@+id/ride_departure"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="3dp" />
+                android:layout_marginRight="25dp" />
+            <TextView
+                android:id="@+id/driver_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:textSize="16sp"/>
         </TableRow>
         <TableRow>
             <TextView
